# CrossSenseCAPTCHA

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  requirements.txt
.github/workflows/: backend_build.yml  wasm_build.yml
dataset/generated_samples/sample_000/: answer.json
dataset/generated_samples/sample_001/: answer.json
dataset/generated_samples/sample_002/: answer.json
dataset/generated_samples/sample_003/: answer.json
dataset/generated_samples/sample_004/: answer.json
dataset/generated_samples/sample_005/: answer.json
dataset/generated_samples/sample_006/: answer.json
dataset/generated_samples/sample_007/: answer.json
dataset/generated_samples/sample_008/: answer.json
dataset/generated_samples/sample_009/: answer.json
dataset/generated_samples/sample_010/: answer.json
dataset/generated_samples/sample_011/: answer.json
dataset/generated_samples/sample_012/: answer.json
dataset/generated_samples/sample_013/: answer.json
dataset/generated_samples/sample_014/: answer.json
dataset/generated_samples/sample_015/: answer.json
scripts/: build_dataset.py
src/backend/: app.py  business_api.py  celery_app.py  detector.py  redis_client.py  tasks.py  validator.py
src/frontend/: index.html
src/generator/: audio_mixer.py  image_composer.py
src/wasm/: Cargo.toml  lib.rs
src/wasm/base/: Cargo.toml
src/wasm/base/src/: lib.rs
src/wasm/logic/: Cargo.toml
src/wasm/logic/src/: lib.rs
tests/: conftest.py  e2e_simulate.py  test_api.py  test_detector.py  test_validator.py
(+49 files in other folders)
