[package]
name = "cross-sense-captcha-wasm"
version = "0.1.0"
edition = "2021"
description = "V8 Wasm Blackbox for CrossSenseCAPTCHA"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
wasm-bindgen = "0.2.87"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
aes-gcm = "0.10.2"
hkdf = "0.12.3"
sha2 = "0.10.7"
rand_core = { version = "0.6.4", features = ["getrandom"] }
getrandom = { version = "0.2.10", features = ["js"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
base64 = "0.21.4"
hmac = "0.12.1"
hex = "0.4.3"
