[package]
name = "cross-sense-captcha-base"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2.87"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
aes-gcm = "0.10.2"
hkdf = "0.12.3"
sha2 = "0.10.7"
rand_core = { version = "0.6.4", features = ["getrandom"] }
getrandom = { version = "0.2.10", features = ["js"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
base64 = "0.21.4"
console_error_panic_hook = "0.1.7"
