[package]
name = "cross-sense-captcha-logic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2.87"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
console_error_panic_hook = "0.1.7"
sha2 = "0.10.7"
hex = "0.4.3"
